--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   toggle_switch: ^2.3.0
   introduction_screen: ^3.1.14
   shared_preferences: ^2.5.3
+  carousel_slider: ^5.0.0
  
 
 dev_dependencies:
@@ -68,6 +69,7 @@ flutter:
     - assets/images/
     - assets/icons/
     - assets/text/Suras/
+    - assets/text/Hadeeth/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
