--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   carousel_slider: ^5.0.0
   flutter_native_splash: ^2.4.6
   flutter_launcher_icons: ^0.14.3
+  http: ^1.4.0
+  intl: ^0.20.2
+  auto_size_text: ^3.0.0
  
 
 dev_dependencies:
