--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   http: ^1.4.0
   intl: ^0.20.2
   auto_size_text: ^3.0.0
+  location: ^8.0.1
+  geocoding: ^4.0.0
+  provider: ^6.1.5
  
 
 dev_dependencies:
